syntax = "proto3";

option csharp_namespace = "BasketService";

package basket;

service Basket{
  rpc GetBasket(GetBasketRequest) returns (GetBasketResponse);
  rpc AddBasket(AddBasketRequest) returns (AddBasketResponse);
  rpc UpdateBasket(UpdateBasketRequest) returns (UpdateBasketResponse);
  rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse);
}

message GetBasketRequest{
  string UserId = 1;
}

message GetBasketResponse{
  int32 ProductId = 1;
  string ProductName = 2;
  int32 Quantity = 3;
}

message AddBasketRequest{
  string UserId = 1;
  int32 ProductId = 2;
  int32 Quantity = 3;
}

message AddBasketResponse{
  bool IsSuccess = 1;
}

message UpdateBasketRequest{
  string UserId = 1;
  int32 ProductId = 2;
  int32 Quantity = 3;
}

message UpdateBasketResponse{
  bool IsSuccess = 1;
}

message DeleteBasketRequest{
  string UserId = 1;
  int32 ProductId = 2;
}

message DeleteBasketResponse{
  bool IsSuccess = 1;
}


